src/z80asm/z80asm2/t/05-cli/expected/at_files_03.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-cli//input/at_files_03.lst
t/05-cli/input/at_files_03.lst:4:5: error: Expected filename after '@'
    	@ 	; missing file
    	  	^
t/05-cli/input/at_files_03.lst:5:5: error: Expected filename after '@'
    	@ 	# missing file
    	  	^
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
verbose	1
cpu_id	z80
ucase_symbols	0
float_format	genmath
preprocess_only	0
generate_dependencies	0
swap_ixiy	0
date_stamp	0
filler_byte	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_hla_expansion	0
dump_after_synth_expansion	0
dump_after_preprocessing	0
dump_after_parse	0
dump_after_symbol_collection	0
dump_after_layout	0
dump_after_assembly	0
dump_after_link_collection	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
global_def	__FLOAT_GENMATH__	1
